style.css
:root {
    --shadows: rgb(190, 190, 190);
    --background-main: #0096c7;
}

html {
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
}
*,
*:before,
*:after {
  -webkit-box-sizing: inherit;
  -moz-box-sizing: inherit;
  box-sizing: inherit;
}

html, body {
    margin: 0;
}
header, section:not(:last-of-type) {
    padding: 0 1rem;
}

h1, h2, h3, h4, p {
    margin: 0;
    padding: 0;
}
ol,
ul,
li {
  list-style: none;
  padding: 0;
  margin: 0;
}
a {
    text-decoration: none;
    color: black;
}

/* Header */
.header {
    height: 10vh;
    display: grid;
    grid-template-columns: minmax(min-content, 350px) minmax(min-content, 350px);
    justify-content: center;
    padding: 1rem 2rem;
}

.logo-container {
    justify-self: start;
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 0.5rem;
}
.logo-icon {
    width: 2rem;
    height: auto;
}

.menu-title {
    font-size: clamp(1.2rem, 4vw, 2rem);
}
.menu-navbar {
    justify-self: end;
    display: flex;
    justify-content: center;
    align-items: center;
}
.menu-list {
    display: flex;
    gap: 1.2rem;
}
.menu-list .menu-list-item:last-child {
    font-weight: 700;
}

/* Content */
.main-content {
    display: flex;
    flex-direction: column;
    gap: 4rem;
}
.image-container {
    position: relative;
    max-width: 380px;
    height: auto;
}
.main-title {
    font-size: clamp(2rem, 4vw, 4rem);
    position: absolute;
    padding: inherit;
    font-size: 3rem;
    color: whitesmoke;
    text-shadow: 0px 2px 6px rgb(82, 82, 82);
    bottom: 2%;
    left: 2%;
}
.image-profile {
    width: 100%;
    height: auto;
    border-radius: 4px;
    box-shadow: 4px 4px 8px var(--shadows);
    object-fit: cover;
}

/* About */
#about {
    padding-top: 1rem;
    padding-bottom: 1rem;
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 1rem;
}

.about-container {
    max-width: 500px;
}
.about-title, .work-title{ 
    font-size: clamp(2rem, 4vw, 4rem);
    text-align: center;
    padding-bottom: 1rem;
}
p.about-text:last-of-type {
    padding-bottom: 0.8rem;
}
.network-list {
    display: flex;
    gap: 1rem;
    justify-content: center;
}
.icon {
    width: 1.5rem;
    height: auto;
}

/* Work */
#work {
    padding-top: 1rem;
    padding-bottom: 1rem;
}

.project-container {
    width: 100%;
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(min-content, 250px));
    justify-content: center;
    gap: 4rem;
}
.project-item {
    width: 100%;
    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: 1fr 120px;
    border-radius: 4px;
    box-shadow: 2px 2px 8px var(--shadows);
}
.project-screenshot {
    width: 100%;
    object-fit: cover;
    border-top-left-radius: inherit;
    border-top-right-radius: inherit;
}
.project-description {
    display: grid;
    padding: 1rem;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: max-content 1fr;
}
.project-list {
    display: flex;
    justify-content: end;
    gap: 1rem;
}
.project-icon {
    width: 1.5rem;
    height: auto;
}
.project-text {
    grid-column: 1/3;
}

/* Contact */
#contact {
    padding-top: 1.6rem;
    display: grid;
    gap: 1rem;
    justify-content: center;

    background-color: var(--background-main);
    color:white;
}

.contact-info {
    display: grid;
    gap: 1rem;
    max-width: 500px;
}
.contact-title {
    font-size: clamp(2rem, 4vw, 4rem);
    text-align: center;
}
.email-container {
    display: flex;
    align-items: center;
    gap: 0.5rem;
}
.foot-network-list {
    display: flex;
    gap: 1rem;
    justify-content: center;
}
.profile-test {
    width: 100%;
    margin-top: 1rem;
    max-width: 500px;
}

#contact > *:not(:last-child) {
    padding: 0 1rem;
}

/* Background */
.header {
    background-color: var(--background-main);
    color:white;
}
.menu-list-item a {
    color:white;
    border-bottom: 1px solid white;
}
.menu-list-item a:hover {
    border-bottom: none;
}
#about {
    background-image: linear-gradient(164deg, var(--background-main) 0%,var(--background-main) 30%, #ffffff 35%, #fff 80%);
}

/* Queries */
/* Cellphones */
@media (max-width: 480px) {
    .header{
        padding: 1rem;
    }
    .email-icon {
        display: none;
        margin: 0;
        padding: 0;
    }
}
/* Tablets */
@media (min-width: 481px) and (max-width: 768px) {

    #about {
        display: inline-block;
        padding: 2rem;
    }
    .image-container {
        width: 200px;
        height: auto;
        float: left;
        margin-right: 1rem;
        top: -1rem;
        left: -1rem;
    }
    .image-profile {
        width: 100%;
        height: 100%;
        object-fit: cover;
    }
    .about-container {
        max-width: 600px;
        box-shadow: 4px 4px 8px var(--shadows);
        background-color: white;
        border-radius: 2px;
        padding: 1rem;
        margin: 0 auto;
    }
}
@media (max-width: 768px) {
    .menu-list-item:not(:last-of-type){
        display: none;
        margin: 0;
        padding: 0;
    }
}
/* Large devices */
@media (min-width: 768px) {
    #about {
        flex-direction: row;
        gap: 0;
        justify-content: center;
        height: 78vh;
        background-image: linear-gradient(168deg, var(--background-main) 0%, var(--background-main) 30%, #ffffff 65%, #fff 60%);
    }
    .about-container {
        padding: 1rem 1.2rem;
        box-shadow: 4px 4px 8px var(--shadows);
        background-color: white;
        border-radius: 2px;
    }
    .about-title {
        text-align: start;
    }
    .network-list {
        justify-content: end;
    }

    #contact {
        padding: 2.5rem 2rem;
        grid-template-columns: minmax(min-content, 600px) 200px;
        grid-template-rows: 200px;
    }
    .contact-title {
        text-align: start;
    }
    .profile-test {
        width: 100%;
        height: 100%;
        margin: 0;
        object-fit: cover;
    }
    .foot-network-list {
        justify-content: start;
    }
}

/* * {
    outline: 1px solid #f00 !important;
  } */

